edited project descriptions and spacing, fixed home page scroll

--- a/src/sass/partials/components/_footer.scss
+++ b/src/sass/partials/components/_footer.scss
@@ -26,6 +26,7 @@ footer p {
     content: "";
     width: 2px;
     height: 25px;
+    top: 8%;
     right: -8%;
     background-color: $pink;
   }
